--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Hi, 
                 <span id="name">Team IST Bangalore</span>
             </h1>
-            <p class="two" id="greetingText">Somthing Good Is Comming Up!</p>
+            <p class="two" id="greetingText">Something Good Is Coming Up!</p>
         </div>
 
         <div class="three">
@@ -65,12 +65,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
-            <img src="./img/image1.jpg" alt="Image 1" class="image1">
-            <img src="./img/image2.jpg" alt="Image 2" class="image2">
-            <img src="./img/image3.jpg" alt="Image 3" class="image3">
-            <img src="./img/image4.jpg" alt="Image 4" class="image4">
-            <img src="./img/image5.jpg" alt="Image 4" class="image5">
+            <img src="./img/deeksha.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/sohini1.png" alt="Image 1" class="image1">
+            <img src="./img/chithra.png" alt="Image 2" class="image2">
+            <img src="./img/nada.jpg" alt="Image 3" class="image3">
+            <img src="./img/rajshree.jpg" alt="Image 4" class="image4">
             <!-- <img src="img/hat.svg" alt="hat" class="hat" /> -->
             <div class="wish">
                 <h3 class="wish-hbd">Happy International Women's Day!</h3>
